otherconfig/apiservice-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app2
  labels:
    app: express-app
spec:
  replicas: 1 # Number of replicas (pods)
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
        - name: express-app
          image: anshik12/ideserver:apiservice
          ports:
            - containerPort: 8080 # Port your app listens on
          resources:
            requests:
              cpu: "100m" # Minimum CPU required
              memory: "128Mi" # Minimum memory required
            limits:
              cpu: "500m" # Maximum CPU allowed
              memory: "512Mi" # Maximum memory allowed
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: express-app-service
  labels:
    app: express-app
spec:
  ports:
    - port: 80 # Port exposed by the service
      targetPort: 8080 # Port the app listens on
  selector:
    app: express-app # Matches the labels in the Deployment
