otherconfig/nginx-wildcard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-reverse-proxy
spec:
  replicas: 5  # Initial number of replicas
  selector:
    matchLabels:
      app: nginx-reverse-proxy
  template:
    metadata:
      labels:
        app: nginx-reverse-proxy
    spec:
      containers:
      - name: nginx
        image: openresty/openresty:alpine
        ports:
        - containerPort: 80
        # resources:
        #   requests:
        #     cpu: "500m"  # 0.5 CPU
        #     memory: "512Mi"
        #   limits:
        #     cpu: "1000m"  # 2 CPU
        #     memory: "2Gi"
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/openresty/nginx/conf/nginx.conf
          subPath: nginx.conf
        - name: nginx-logs
          mountPath: /var/log/nginx
      volumes:
      - name: config-volume
        configMap:
          name: custom-nginx-config
      - name: nginx-logs
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-reverse-proxy
  type: ClusterIP  # Use LoadBalancer if exposing externally
