otherconfig/openrusty-ingress.yaml
# Deployment for OpenResty Ingress Controller
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openresty-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openresty-ingress
  template:
    metadata:
      labels:
        app: openresty-ingress
    spec:
      containers:
      - name: openresty
        image: openresty/openresty:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: config
          mountPath: /etc/nginx/lua/routing.lua
          subPath: routing.lua
      volumes:
      - name: config
        configMap:
          name: openresty-ingress-config

---
# Service for OpenResty Ingress Controller
apiVersion: v1
kind: Service
metadata:
  name: openresty-ingress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080  # You can specify a port between 30000-32767
    protocol: TCP
    name: http
  selector:
    app: openresty-ingress
